--- a/environment.yml
+++ b/environment.yml
@@ -1,7 +1,25 @@
-name: xeus-kernel
+name: xeus-kernels
 channels:
-  - https://repo.prefix.dev/emscripten-forge-dev
-  - https://repo.prefix.dev/conda-forge
+  - https://repo.mamba.pm/emscripten-forge
+  - conda-forge
 dependencies:
   - xeus-python
   - ipycanvas
+  - numpy
+  - pandas
+  - scipy
+  - seaborn
+  - matplotlib
+  - scikit-learn
+  - xeus-r
+  - r-base
+  - r-ggplot2
+  - r-dplyr
+  - r-tidyr
+  - r-readr
+  - r-purrr
+  - r-tibble
+  - r-stringr
+  - r-forcats
+  - r-coursekata
+  - r-neuralnet
